[package]
name = "grab-xkcd"
version = "0.1.0"
authors = ["Kevin K. <kbknapp@gmail.com>"]
edition = "2018"
repository = "https://github.com/kbknapp/grab-xkcd"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
reqwest = {version = "0.10.4", features = ["blocking"] }
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
url = "2.1.1"
