[package]
name = "grab-xkcd"
version = "0.1.0"
authors = ["Kevin K. <kbknapp@gmail.com>"]
edition = "2018"
repository = "https://github.com/kbknapp/grab-xkcd"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
url = "2.2.2"
